# user-api

./: .env-sample  .gitignore  LICENSE  README.md  pyproject.toml  settings.toml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  users.py
app/containers/: container.py
app/core/: auth.py  config.py  exceptions.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  claim.py  role.py  user.py
app/repositories/: __init__.py  base.py  role_repository.py  user_repository.py
app/schemas/: __init__.py  auth.py  role.py  user.py
app/services/: __init__.py  user_service.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_user_is_active.py  0003_use_uuid_ids.py
tests/: conftest.py  test_user_service.py  test_users_endpoint.py
